--- a/src/App.css
+++ b/src/App.css
@@ -400,7 +400,31 @@ nav .menu span{
     width: 100% !important;
 }
 }
+@media (max-width: 512px) {
+  .carousel-list{
+    
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    z-index: 1;
+    margin-top: 20px !important;
 
+  }
+  
+}
+@media (max-width: 512px) {
+  .carousel-list{
+    
+    position: absolute;
+    top: 5%;
+    left: 0;
+    z-index: 1;
+    margin-top: 20px !important;
+    
+
+  }
+  
+}
 
 .our-services .col-md-4{
   margin-top: 50px;
